fix overflowing image issue on cause screen

--- a/stylesheets/layout/_cause-screen.scss
+++ b/stylesheets/layout/_cause-screen.scss
@@ -14,6 +14,7 @@
 }
 
 .carousel-area {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   .carousel {
